make public domain optional
