# api/src/openapi.rs
@@ -56,6 +56,7 @@ impl Modify for SecurityAddon {
       models::galaxy::CreateGalaxyData,
       models::galaxy::UpdateGalaxyData,
       models::star::Star,
+      models::star::PublicDomain,
       models::star::CreateStarData,
       models::star::UpdateStarData,
       models::planet::Planet,
